# gh_summary_bot

./: .dockerignore  .gitignore  ARCHITECTURE.md  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: coverage.yml  lint.yml  test.yml
devops/: Dockerfile  README.md  docker-entrypoint.sh  supervisord.conf
gh_summary_bot/: __main__.py  app.py  bot.py  database.py  gh_gql_client.py  github_analyzer.py  github_source.py  models.py  protocols.py  storage.py  telegram_bot.py  templates.py
gh_summary_bot/templates/: __init__.py  alltime_template.j2  languages_template.j2  yearly_template.j2
scripts/: pre-commit  setup-hooks.sh
tests/: test_github_analyzer.py  test_github_source.py  test_templates.py
