[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gh-summary-bot"
version = "0.1.0"
description = "GitHub contribution analyzer with PostgreSQL storage and Telegram bot interface"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.10.11",
    "aiopg>=1.4.0",
    "python-dotenv>=1.1.0",
    "python-telegram-bot>=22.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["gh_summary_bot*"]

[dependency-groups]
dev = [
    "ruff>=0.12.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]
