[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gh-summary-bot"
version = "0.1.0"
description = "GitHub contribution analyzer with PostgreSQL storage and Telegram bot interface"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.10.11",
    "aiopg>=1.4.0",
    "python-dotenv>=1.1.0",
    "python-telegram-bot>=22.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["gh_summary_bot*"]

[dependency-groups]
dev = [
    "ruff>=0.12.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "mypy>=1.8.0",
]

[tool.mypy]
python_version = "3.13"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = true
warn_unreachable = true
strict_equality = false
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "aiopg.*",
    "telegram.*",
    "dotenv.*",
]
ignore_missing_imports = true

# Remove module ignores to fix all type issues
